[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "route-bounder"
version = "0.0.1"
authors = [
  { name="Derek Werbowy", email="derek.werbowy@gmail.com" },
]
description = "'Find along my route' polygon creation tool"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/route_bounder.py"]